5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4487/executions/1811_2563.log
== TEST (2019-06-06 18:27:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
fori in range(size(notas)):
soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
File "XXXX", line 4
    fori in range(size(notas)):
                              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:28:24) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:28:55) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:29:06) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:29:53) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:31:42) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(7)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:32:28) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:34:25) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:34:47) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:35:15) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:35:47) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 0
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:38:09) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 5
i=7
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:38:26) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 5
i=7
for i in range(size(notas)):
   soma = soma + notas[i]
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:39:36) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: "))) 
soma = 5
i=7
for i in range(size(notas)):
   soma = soma + notas[i]
	i=i+1
media = soma / size(notas)
print(round(media,2))
-- ERROR:
File "XXXX", line 7
    i=i+1
        ^
TabError: inconsistent use of tabs and spaces in indentation
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:45:59) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 0 
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:46:24) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 5
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:46:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 5
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 2
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:47:40) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 5
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 3
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:48:03) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 7
i = 5
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:49:06) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 7
i = 5
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:49:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 5
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:50:21) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 7
i = 5
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:53:07) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 7))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 18:54:05) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:17) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:44) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:06:59) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:07:15) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma = 0
i = 7
while(i < size(notas)):
	soma = soma + notas[i]
	i = i - 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:09:25) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i - 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:09:51) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i - 1
media = soma / size(notas)
print(round(media,))
-- EXECUTION TIME:
0.999685
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2563/main.py", line 6, in <module>
    soma = soma + notas[i]
IndexError: index 7 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:10:00) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i - 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:10:27) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =0
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:11:05) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:11:58) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- EXECUTION TIME:
0.987087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1811/2563/main.py", line 6, in <module>
    soma = soma + notas[i]
IndexError: index 7 is out of bounds for axis 0 with size 6

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:12:21) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 5
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:12:56) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 5
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:13:25) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 5
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:14:34) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 0
while(i > size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:15:41) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-06 19:15:48) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- EXECUTION TIME:
0.873717
-- TEST CASE 1:
---- input:
[6.3,6.4,6.0,6.9,5.5,5.2]
[4.5,3.8,7.8,4.8,9.6,9.2,8.7,2.3,2.9]
[5.6,4.7,3.8,7.5,8.2,8.4,7.1,6.9,6.7]
[1.1,3.1,2.7,7.8,6.7,4.6,4.9,7.0]
[1]
---- correct output:
6
0
3
1
---- user output:
7.0
-- TEST CASE 2:
---- input:
[5.1,5.2,5.4,5.3,5.7,5.8,6.1,5.6,5.5,5.9,6.2]
[2.7,6.8,4.7,5.7,3.5,6.6,7.0,5.4]
[8.7,8.6,8.9,8.6,7.5,7.2,6.9,7.4,7.2]
[1]
---- correct output:
11
4
1
---- user output:
6.0
-- TEST CASE 3:
---- input:
[8.5,7.5,6.8,6.9,7.0,5.6,5.8,6.3]
[7.3,7.1,7.0,6.8,6.0,5.0]
[1]
---- correct output:
5
3
---- user output:
8.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:15:52) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =7
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:16:13) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:16:37) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 0
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:17) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i + 0
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:17:39) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma + notas[i]
	i = i -1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:18:22) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma * notas[i]
	i = i -1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:18) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 0
while(i < size(notas)):
	soma = soma * notas[i]
	i = i +1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-06 19:19:57) 
-- CODE:
from numpy import *
notas = array(eval(input("Informe as notas: ")))
soma =5
i = 7
while(i < size(notas)):
	soma = soma * notas[i]
	i = i +1
media = soma / size(notas)
print(round(media,))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
